Bug 89431 - [PATCH]mac80211: multicast adds to rx-led and is not counted
Summary: [PATCH]mac80211: multicast adds to rx-led and is not counted
Status: CLOSED CODE_FIX
Alias: None
Product: Networking
Classification: Unclassified
Component: Wireless (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: networking_wireless@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-08 05:43 UTC by Andreas Müller
Modified: 2014-12-12 11:13 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.17.4
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
patch (1.30 KB, patch)
2014-12-08 05:43 UTC, Andreas Müller
Details | Diff

Description Andreas Müller 2014-12-08 05:43:09 UTC
Created attachment 160001 [details]
patch

"mac80211: fix use-after-free in defragmentation" (b8fff407a180286aa683d543d878d98d9fc57b13) introduced two little bugs.
As multicast-frames are never fragmented, "dot11MulticastReceivedFrameCount" would never be incremented. Furthermore, the RX-LED will be triggered by every multicast frame (which wouldn't happen before) which wouldn't allow my LED to rest at all.

I hope the appended patch and original commit message allows to clarify that.
Comment 1 Johannes Berg 2014-12-12 11:10:34 UTC
Patch looks fine, I'll apply it. In the future, please submit wireless patches to the mailing list (linux-wireless@vger.kernel.org) instead of here.

Note You need to log in before you can comment on or make changes to this bug.